# cura-mais-backend

./: .gitignore  README.md
backend/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 41eab0c36c9e_initial_identity_schema.py  4eefc4fbb15e_onboarding_module_schema.py  a88ea57d63d1_providers_module_schema.py
backend/api-tests/: README.md  auth.http  onboarding-applicant.http  onboarding-back-office.http  providers-back-office.http  providers-self-service.http  system.http  users.http
backend/app/: main.py
backend/app/core/: config.py  context.py  database.py  envelope.py  exceptions.py  idempotency.py  logging_config.py  middleware.py  model_helpers.py  models.py  notifications.py  outbox.py  rate_limit.py  schema_base.py
backend/openapi/: api.json  api.yaml
backend/scripts/: assign_role.py  create_user.py  export_openapi.py  generate_jwt_keys.py  seed_document_requirements.py  seed_medical_specialities.py  seed_roles_permissions.py
backend/tests/: conftest.py  test_login.py  test_mfa.py  test_onboarding_application.py  test_onboarding_decision.py  test_onboarding_documents_and_information_requests.py  test_onboarding_review.py  test_outbox_dispatcher.py  test_password.py  test_providers_affiliations_publication.py  test_providers_backoffice_public.py  test_providers_creation.py  test_providers_credentials.py  test_providers_profile.py  test_providers_services_locations.py  test_providers_specialities_languages.py  test_registration.py  test_roles.py  test_sessions.py  test_tokens.py  test_verification.py
(+104 files in other folders)
